[package]
name = "crypto"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
blstrs = "0.7.1"
curve25519-dalek = "4.1.3"
der = { version = "0.7.10", features = ["alloc", "arbitrary", "derive", "oid"] }
dusk-bls12_381 = "0.14.2"
dusk-poseidon = "0.41.0"
ecdsa = { version = "0.16.9", features = ["sha2", "signing", "verifying"] }
ed25519-dalek = { version = "2.2.0", features = ["alloc"] }
ff = "0.13.1"
fixed-hash = "0.8.0"
getrandom = { version = "0.2.16", features = ["js"] }
group = "0.13.0"
p256 = "0.13.2"
primitive-types = { version = "0.14.0", features = ["serde"] }
sha3 = "0.10.8"
wasm-bindgen = "0.2.103"
zeroize = "1.8.2"

[dev-dependencies]
x509-parser = "0.18.0"
